--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "async": "^3.2.3",
     "chalk": "^4.1.2",
     "commander": "^6.2.0",
-    "link-check": "^5.1.0",
+    "link-check": "https://github.com/KennyAmex/link-check.git",
     "lodash": "^4.17.21",
     "markdown-link-extractor": "^3.0.2",
     "needle": "^3.1.0",
